--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,13 +17,18 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/middie": "^8.0.0",
-    "@swc-node/register": "^1.5.1",
     "dd-trace": "^3.2.0",
+    "debug": "^4.3.4",
     "fastify": "^4.5.3",
-    "fastify-cli": "^5.4.1"
+    "fastify-cli": "^5.4.1",
+    "typescript": "^4.8.3"
   },
   "devDependencies": {
+    "@fastify/restartable": "^1.2.1",
+    "@swc-node/register": "^1.5.1",
+    "chokidar": "^3.5.3",
     "ansi-to-html": "^0.7.2",
     "ts-node": "^10.9.1"
+
   }
 }
