--- a/package.json
+++ b/package.json
@@ -9,24 +9,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@fastify/restartable": "^1.2.1",
     "@swc-node/sourcemap-support": "^0.2.0",
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.2.248",
     "@tsconfig/recommended": "^1.0.1",
     "@types/debug": "^4.1.7",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "chokidar": "^3.5.3",
-    "debug": "^4.3.4",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-lodash": "^7.4.0",
     "jest": "^29.0.3",
-    "pirates": "^4.0.5",
     "prettier": "^2.7.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.8.3"
+    "tslib": "^2.4.0"
   },
   "workspaces": [
     "apps/api"
