--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev:api": "npm run dev -w @hearye/api",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -21,10 +22,12 @@
     "eslint-plugin-lodash": "^7.4.0",
     "jest": "^29.0.3",
     "prettier": "^2.7.1",
+    "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0"
   },
   "workspaces": [
-    "apps/api"
+    "apps/api",
+    "packages/db"
   ],
   "dependencies": {
     "dotenv": "^16.0.2"
