--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
 {
+  "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
+    "experimentalDecorators": true,
     "jsx": "react",
     "paths": {
       "@hearye/api": ["../../apps/api/src"],
       "@hearye/api/*": ["../../apps/api/src/*"],
+      "@hearye/db": ["../../packages/db/src"],
+      "@hearye/db/*": ["../../packages/db/src/*"]
     }
   },
-  "extends": "@tsconfig/recommended/tsconfig.json"
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  }
 }
