Basic type for env

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
       "@hearye/api": ["../../apps/api/src"],
       "@hearye/api/*": ["../../apps/api/src/*"],
       "@hearye/db": ["../../packages/db/src"],
-      "@hearye/db/*": ["../../packages/db/src/*"]
+      "@hearye/db/*": ["../../packages/db/src/*"],
+      "@hearye/env": ["../../packages/env/src"],
+      "@hearye/env/*": ["../../packages/env/src/*"]
     }
   },
   "ts-node": {
