--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/index.js",
   "scripts": {
+    "migrate": "knex migrate:latest",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
