--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev:api": "npm run dev --workspace @hearye/api",
+    "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "test": "echo \"Error: no test specified\" && exit 1",
     "migrate": "npm run migrate --workspace @hearye/db"
   },
@@ -28,10 +29,12 @@
   },
   "workspaces": [
     "apps/api",
+    "apps/reminder-runner",
     "packages/db",
     "packages/env"
   ],
   "dependencies": {
+    "dayjs": "^1.11.5",
     "dotenv": "^16.0.2"
   }
 }
