--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist",
     "start": "node dist/index.js",
-    "dev": "DEBUG=hearye* ts-node  --swc src/dev.ts",
+    "dev": "DEBUG=hearye* node --expose-gc --loader ts-node/esm src/dev.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run lint:eslint && npm run lint:prettier",
     "lint:eslint": "eslint --max-warnings 0 ./src",
