--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build:api": "npm run build:db && npm run build:env && npm run build --workspace @hearye/api",
+    "build:dayjs": "npm run build --workspace @hearye/dayjs",
+    "build:db": "npm run build:dayjs && npm run build --workspace @hearye/db",
+    "build:env": "npm run build --workspace @hearye/env",
     "dev:api": "npm run dev --workspace @hearye/api",
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
+    "migrate": "npm run migrate --workspace @hearye/db",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "migrate": "npm run migrate --workspace @hearye/db"
+    "start:api": "npm run start --workspace @hearye/api"
   },
   "author": "",
   "license": "ISC",
