--- a/packages/dayjs/package.json
+++ b/packages/dayjs/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "./src/index.ts",
-  "scripts": {},
+  "scripts": {
+    "build": "rm -rf ./dist && swc ./src --out-dir ./dist"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
