--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:dayjs": "npm run build --workspace @hearye/dayjs",
     "build:db": "npm run build:dayjs && npm run build --workspace @hearye/db",
     "build:env": "npm run build --workspace @hearye/env",
+    "hello": "npm run hello --workspace @hearye/dayjs",
     "dev:api": "npm run dev --workspace @hearye/api",
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "migrate": "npm run migrate --workspace @hearye/db",
