--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,8 @@
   "devDependencies": {
     "@fastify/restartable": "^1.2.1",
     "@swc-node/register": "^1.5.1",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.8",
     "ansi-to-html": "^0.7.2",
     "chokidar": "^3.5.3",
     "ts-node": "^10.9.1"
