--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -7,5 +7,9 @@
     "dev": "TZ=UTC DEBUG=\"${DEBUG:=hearye*}\" node --expose-gc src/dev.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.8"
+  }
 }
