--- a/packages/dayjs/package.json
+++ b/packages/dayjs/package.json
@@ -14,5 +14,9 @@
     "knex": "^2.3.0",
     "objection": "^3.0.1",
     "pg": "^8.8.0"
+  },
+  "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.8"
   }
 }
