--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -12,6 +12,8 @@
     "find-config": "^1.0.0"
   },
   "devDependencies": {
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.8",
     "@types/find-config": "^1.0.1"
   }
 }
