--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "migrate": "npm run migrate --workspace @hearye/db",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api": "npm run start --workspace @hearye/api"
+    "start:api": "npm run start --workspace @hearye/api",
+    "tunnel": "lt --subdomain hearye --port 8080"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-lodash": "^7.4.0",
     "jest": "^29.0.3",
+    "localtunnel": "^2.0.2",
     "prettier": "^2.7.1",
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0"
