--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist",
-    "migrate": "knex migrate:latest",
+    "migrate": "knex migrate:latest --knexfile ./knexconfig.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
