--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.8"
+    "@swc/core": "^1.3.8",
+    "ts-node": "^10.9.1"
   }
 }
