--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist",
-    "start": "TZ=UTC DEBUG=* node dist/index.js",
-    "dev": "TZ=UTC DEBUG=\"${DEBUG:=hearye*}\" node --expose-gc src/dev.js"
+    "start": "node dist/index.js",
+    "dev": "node --expose-gc src/dev.js"
   },
   "author": "",
   "license": "ISC",
