--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "localtunnel": "^2.0.2",
     "prettier": "^2.7.1",
     "tsconfig-paths": "^4.1.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "ts-node": "^10.9.1"
   },
   "workspaces": [
     "apps/api",
