--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,14 @@
     "experimentalDecorators": true,
     "jsx": "react",
     "module": "commonjs",
+    "baseUrl": "/Users/msaspence/Projects/hearye",
     "paths": {
-      "@hearye/api": ["./apps/api/src"],
-      "@hearye/api/*": ["./apps/api/src/*"],
-      "@hearye/db": ["./packages/db/src"],
-      "@hearye/db/*": ["./packages/db/src/*"],
-      "@hearye/env": ["./packages/env/src"],
-      "@hearye/env/*": ["./packages/env/src/*"]
+      "@hearye/api": ["apps/api/src"],
+      "@hearye/api/*": ["apps/api/src/*"],
+      "@hearye/db": ["packages/db/src"],
+      "@hearye/db/*": ["packages/db/src/*"],
+      "@hearye/env": ["packages/env/src"],
+      "@hearye/env/*": ["packages/env/src/*"]
     }
   },
   "ts-node": {
