--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:api": "npm run build:db && npm run build:env && npm run build --workspace @hearye/api && cat packages/env/dist/knexconfig.js",
+    "build:api": "npm run build:db && npm run build:env && npm run build --workspace @hearye/api && ls -la && cat packages/env/dist/knexconfig.js",
     "build:dayjs": "npm run build --workspace @hearye/dayjs",
     "build:db": "npm run build:dayjs && npm run build --workspace @hearye/db",
     "build:env": "npm run build --workspace @hearye/env",
