--- a/packages/db/.swcrc
+++ b/packages/db/.swcrc
@@ -7,11 +7,10 @@
     "target": "es2019",
     "baseUrl": ".",
     "paths": {
-      "@hearye/dayjs": ["../../packages/dayjs/dist"],
-      "@hearye/dayjs/*": ["../../packages/dayjs/dist/*"],
       "@hearye/env": ["../../packages/env/dist"],
-      "xxx": ["../../zzz"],
-      "@hearye/env/*": ["../../packages/env/dist/*"]
+      "@hearye/env/*": ["../../packages/env/dist/*"],
+      "@hearye/dayjs": ["../../packages/dayjs/dist"],
+      "@hearye/dayjs/*": ["../../packages/dayjs/dist/*"]
     }
   },
   "sourceMaps": true,
