--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:api": "npm run build:db && npm run build:env && npm run build --workspace @hearye/api && cat apps/api/dist/apiApp.js && cat apps/api/dist/index.js && cat packages/db/dist/index.js",
+    "build:api": "npm run build --workspace @hearye/test-package && npm run build --workspace @hearye/test-app && cat packages/test-package/dist/index.js && cat apps/test-app/dist/index.js",
     "build:dayjs": "npm run build --workspace @hearye/dayjs",
     "build:db": "npm run build:dayjs && npm run build --workspace @hearye/db",
     "build:env": "npm run build --workspace @hearye/env",
@@ -13,7 +13,7 @@
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "migrate": "npm run migrate --workspace @hearye/db",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api": "npm run start --workspace @hearye/api",
+    "start:api": "npm run start --workspace @hearye/test-app",
     "start:reminder-runner": "npm run start --workspace @hearye/reminder-runner",
     "tunnel": "lt --subdomain hearye --port 8080",
     "test-ts": "ts-node ./test-ts.ts"
@@ -40,10 +40,12 @@
   },
   "workspaces": [
     "apps/api",
+    "apps/test-app",
     "apps/reminder-runner",
     "packages/dayjs",
     "packages/db",
-    "packages/env"
+    "packages/env",
+    "packages/test-package"
   ],
   "dependencies": {
     "dotenv": "^16.0.2"
