--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file .swcrc",
+    "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file ../../.swcrc",
     "start": "node dist/index.js",
     "dev": "node --expose-gc src/dev.js"
   },
