--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:api": "npm run build --workspace @hearye/test-package && npm run build --workspace @hearye/test-app && cat packages/test-package/dist/index.js && cat apps/test-app/dist/index.js",
+    "build:api": "npm run build:env && npm run build:db && npm run build --workspace @hearye/api",
     "build:dayjs": "npm run build --workspace @hearye/dayjs",
-    "build:db": "npm run build:dayjs && npm run build --workspace @hearye/db",
+    "build:db": "npm run build:env && npm run build:dayjs && npm run build --workspace @hearye/db",
     "build:env": "npm run build --workspace @hearye/env",
     "build:reminder-runner": "npm run build --workspace @hearye/reminder-runner",
     "dev:api": "npm run dev --workspace @hearye/api",
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "migrate": "npm run migrate --workspace @hearye/db",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:api": "npm run start --workspace @hearye/test-app",
+    "start:api": "npm run start --workspace @hearye/api",
     "start:reminder-runner": "npm run start --workspace @hearye/reminder-runner",
-    "tunnel": "lt --subdomain hearye --port 8080",
-    "test-ts": "ts-node ./test-ts.ts"
+    "tunnel": "lt --subdomain hearye --port 8080"
   },
   "author": "",
   "license": "ISC",
@@ -40,12 +39,10 @@
   },
   "workspaces": [
     "apps/api",
-    "apps/test-app",
     "apps/reminder-runner",
     "packages/dayjs",
     "packages/db",
-    "packages/env",
-    "packages/test-package"
+    "packages/env"
   ],
   "dependencies": {
     "dotenv": "^16.0.2"
