--- a/render.yaml
+++ b/render.yaml
@@ -16,6 +16,7 @@ services:
     numInstances: 1
     envVars:
       - fromGroup: Production
+      - fromGroup: DB URL
     autoDeploy: true
     domains:
       - api.hearyebot.com
@@ -36,8 +37,17 @@ services:
     numInstances: 1
     envVars:
       - fromGroup: Production
+      - fromGroup: DB URL
     autoDeploy: true
 
 databases:
   - name: DB Production
     databaseName: hearye
+
+envVarGroups:
+  - name: DB URL
+    envVars:
+      - key: DATABASE_URL
+        fromDatabase:
+          name: DB Production
+          property: connectionString
