--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -2,6 +2,7 @@
   "name": "@hearye/env",
   "version": "1.0.0",
   "description": "",
+  "main": "./src/index.ts",
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file ../../.swcrc",
     "test": "echo \"Error: no test specified\" && exit 1"
