--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,7 +2,7 @@
   "name": "@hearye/db",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file ../../.swcrc",
     "migrate": "knex migrate:latest --knexfile ./src/knexconfig.ts",
