--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file ../../.swcrc",
     "start": "node dist/index.js",
-    "dev": "TZ=UTC DEBUG=\"${DEBUG:=hearye*}\" node --expose-gc src/dev.js"
+    "dev": "TZ=UTC DEBUG=\"${DEBUG:=hearye*}\" node --expose-gc src/dev.js",
+    "sentry:release:new": "sentry-cli releases --org hear-ye --project api  new $RENDER_GIT_COMMIT",
+    "sentry:release:finalize": "sentry-cli releases --org hear-ye --project api finalize $RENDER_GIT_COMMIT",
+    "sentry:release:deploy": "sentry-cli releases --org hear-ye --project api  deploys $RENDER_GIT_COMMIT new -e $NODE_ENV"
   },
   "author": "",
   "license": "ISC",
