--- a/package.json
+++ b/package.json
@@ -15,10 +15,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:api": "npm run start --workspace @hearye/api",
     "start:reminder-runner": "npm run start --workspace @hearye/reminder-runner",
-    "tunnel": "lt --subdomain hearye --port 8080",
-    "sentry:release:new": "sentry-cli releases --org hear-ye new $RENDER_GIT_COMMIT",
-    "sentry:release:finalize": "sentry-cli releases --org hear-ye finalize $RENDER_GIT_COMMIT",
-    "sentry:release:deploy": "sentry-cli releases --org hear-ye deploys $RENDER_GIT_COMMIT new -e $NODE_ENV"
+    "tunnel": "lt --subdomain hearye --port 8080"
   },
   "author": "",
   "license": "ISC",
