--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:api": "npm run build:env && npm run build:db && npm run build --workspace @hearye/api",
-    "build:dayjs": "npm run build --workspace @hearye/dayjs",
-    "build:db": "npm run build:env && npm run build:dayjs && npm run build --workspace @hearye/db",
+    "build:api": "npm run build:logger && npm run build:env && npm run build:db && npm run build --workspace @hearye/api",
+    "build:dayjs": "npm run build:logger && npm run build --workspace @hearye/dayjs",
+    "build:db": "npm run build:logger && npm run build:env && npm run build:dayjs && npm run build --workspace @hearye/db",
     "build:env": "npm run build --workspace @hearye/env",
-    "build:reminder-runner": "npm run build:env && npm run build:db && npm run build --workspace @hearye/reminder-runner",
+    "build:logger": "npm run build --workspace @hearye/logger",
+    "build:reminder-runner": "npm run build:logger && npm run build:env && npm run build:db && npm run build --workspace @hearye/reminder-runner",
     "dev:api": "npm run dev --workspace @hearye/api",
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "migrate": "npm run migrate --workspace @hearye/db",
@@ -43,12 +44,16 @@
     "apps/reminder-runner",
     "packages/dayjs",
     "packages/db",
-    "packages/env"
+    "packages/env",
+    "packages/logger"
   ],
   "dependencies": {
     "@immobiliarelabs/fastify-sentry": "^5.0.0-next.1",
+    "@logtail/node": "^0.1.12",
+    "@logtail/winston": "^0.1.13",
     "@sentry/node": "^7.16.0",
     "@sentry/tracing": "^7.16.0",
-    "dotenv": "^16.0.2"
+    "dotenv": "^16.0.2",
+    "winston": "^3.8.2"
   }
 }
