--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,6 +26,7 @@
     "debug": "^4.3.4",
     "fastify": "^4.5.3",
     "fastify-cli": "^5.4.1",
+    "fastify-plugin": "^4.3.0",
     "slack-bolt-fastify": "^0.3.1",
     "typescript": "^4.8.3"
   },
