--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@sentry/node": "^7.16.0",
     "@sentry/tracing": "^7.16.0",
     "dotenv": "^16.0.2",
+    "fastify-plugin": "^4.3.0",
     "winston": "^3.8.2"
   }
 }
