--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -18,6 +18,7 @@
     "@vitejs/plugin-react": "^2.2.0",
     "sass": "^1.55.0",
     "typescript": "^4.6.4",
-    "vite": "^3.2.0"
+    "vite": "^3.2.0",
+    "vite-plugin-favicon2": "^1.1.4"
   }
 }
