--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -4,21 +4,25 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "node server",
+    "build": "npm run build:static",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir dist/server",
+    "build:static": "BUILD_FAVICONS=true vite build --outDir dist/static && npm run build:server && node prerender",
+    "serve": "NODE_ENV=production node server",
+    "start": "serve dist/static",
+    "debug": "node --inspect-brk server"
   },
   "dependencies": {
+    "prando": "^6.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
     "@vitejs/plugin-react": "^2.2.0",
-    "sass": "^1.55.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.2.0",
-    "vite-plugin-favicon2": "^1.1.4"
+    "compression": "^1.7.4",
+    "express": "^4.18.2",
+    "serve": "^14.0.1",
+    "serve-static": "^1.15.0"
   }
 }
