--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -29,6 +29,7 @@
     "fastify-cli": "^5.4.1",
     "fastify-plugin": "^4.3.0",
     "globby": "^13.1.2",
+    "lodash": "^4.17.21",
     "sass": "^1.56.1",
     "slack-bolt-fastify": "^0.3.1",
     "typescript": "^4.8.3",
@@ -45,6 +46,7 @@
     "@swc/core": "^1.3.14",
     "@types/compression": "^1.7.2",
     "@types/glob": "^8.0.0",
+    "@types/lodash": "^4.14.189",
     "@types/react-dom": "^18.0.9",
     "ansi-to-html": "^0.7.2",
     "chokidar": "^3.5.3",
