--- a/slack-manifest.local.yaml
+++ b/slack-manifest.local.yaml
@@ -1,6 +1,6 @@
 display_information:
   name: Hear Ye! Local
-  description: Bot for making an acknowledging announcements
+  description: Bot to ensure critical message are acknowledged and read
   background_color: '#27282b'
 features:
   app_home:
@@ -14,7 +14,7 @@ features:
     - command: /hearye
       url: https://hearye.loca.lt/slack/command
       description: Hear Ye! Hear!
-      usage_hint: make announcement requiring acknowledgement
+      usage_hint: create message requiring acknowledgement
       should_escape: false
 oauth_config:
   redirect_urls:
