--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -7,6 +7,7 @@
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file ../../.swcrc",
     "start": "node dist/index.js",
     "dev": "TZ=UTC DEBUG=\"${DEBUG:=hearye*}\" node --expose-gc --loader ts-node/esm src/dev.js",
+    "typecheck": "tsc --noEmit",
     "sentry:release:new": "sentry-cli releases --org hear-ye --project reminder-runner new $RENDER_GIT_COMMIT",
     "sentry:release:finalize": "sentry-cli releases --org hear-ye --project reminder-runner finalize $RENDER_GIT_COMMIT",
     "sentry:release:deploy": "sentry-cli releases --org hear-ye --project reminder-runner deploys $RENDER_GIT_COMMIT new -e $NODE_ENV --name $NODE_ENV:reminder-run:$RENDER_GIT_COMMIT"
