--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "localtunnel": "^2.0.2",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
+    "ts-unused-exports": "^9.0.4",
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0"
   },
