--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "build": "rm -rf ./dist && swc ./src --out-dir ./dist --config-file ../../.swcrc",
+    "typecheck": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
