--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "build:api": "npm run build:logger && npm run build:env && npm run build:db && npm run build --workspace @hearye/api",
     "build:dayjs": "npm run build:logger && npm run build --workspace @hearye/dayjs",
@@ -15,11 +16,11 @@
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
     "dev:site": "npm run dev --workspace @hearye/site",
     "migrate": "npm run migrate --workspace @hearye/db",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:api": "npm run start --workspace @hearye/api",
     "start:reminder-runner": "npm run start --workspace @hearye/reminder-runner",
     "start:site": "npm run start --workspace @hearye/site",
-    "tunnel": "./loophole http 8080 --hostname hearye"
+    "tunnel": "./loophole http 8080 --hostname hearye",
+    "test": "vitest"
   },
   "author": "",
   "license": "ISC",
@@ -27,21 +28,25 @@
     "@sentry/cli": "^2.8.0",
     "@swc-node/sourcemap-support": "^0.2.0",
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.2.248",
+    "@swc/core": "^1.3.40",
+    "@swc/jest": "^0.2.24",
     "@tsconfig/recommended": "^1.0.1",
     "@types/debug": "^4.1.7",
+    "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "eslint": "^8.23.1",
+    "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-lodash": "^7.4.0",
-    "jest": "^29.0.3",
+    "jest-extended": "^3.2.4",
     "localtunnel": "^2.0.2",
+    "msw": "^1.1.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
     "ts-unused-exports": "^9.0.4",
     "tsconfig-paths": "^4.1.0",
-    "tslib": "^2.4.0"
+    "tslib": "^2.4.0",
+    "vitest": "^0.29.2"
   },
   "workspaces": [
     "apps/api",
@@ -53,6 +58,7 @@
     "packages/logger"
   ],
   "dependencies": {
+    "@fastify/express": "^2.3.0",
     "@immobiliarelabs/fastify-sentry": "^5.0.0-next.1",
     "@logtail/node": "^0.1.12",
     "@logtail/winston": "^0.1.13",
@@ -60,6 +66,7 @@
     "@sentry/tracing": "^7.16.0",
     "dotenv": "^16.0.2",
     "fastify-plugin": "^4.3.0",
+    "pg": "^8.10.0",
     "winston": "^3.8.2"
   }
 }
