--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
       "@hearye/env/*": ["packages/env/src/*"],
       "@hearye/logger": ["packages/logger/src"],
       "@hearye/logger/*": ["packages/logger/src/*"]
-    }
+    },
+    "types": ["vitest/globals"]
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
