Add test for self mention

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "vitest.commandLine": ""
+  "vitest.commandLine": "",
+  "testing.automaticallyOpenPeekView": "never",
+  "vitest.nodeEnv": {
+    "VSCODE_TESTING": "true"
+  }
 }
