--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ts-unused-exports": "^9.0.4",
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
+    "vite-tsconfig-paths": "^4.0.7",
     "vitest": "^0.29.2"
   },
   "workspaces": [
