--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@types/debug": "^4.1.7",
     "@types/pg": "^8.6.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@vitest/coverage-c8": "^0.29.7",
+    "@vitest/coverage-istanbul": "^0.29.7",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-jest": "^27.0.4",
@@ -47,7 +49,8 @@
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
     "vite-tsconfig-paths": "^4.0.7",
-    "vitest": "^0.29.2"
+    "vitest": "^0.29.2",
+    "vitest-mock-extended": "^1.1.3"
   },
   "workspaces": [
     "apps/api",
