--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start:reminder-runner": "npm run start --workspace @hearye/reminder-runner",
     "start:site": "npm run start --workspace @hearye/site",
     "tunnel": "./loophole http 8080 --hostname hearye",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "author": "",
   "license": "ISC",
@@ -36,10 +37,13 @@
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@vitest/coverage-c8": "^0.29.7",
     "@vitest/coverage-istanbul": "^0.29.7",
+    "@vitest/ui": "^0.29.7",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-lodash": "^7.4.0",
+    "eslint-plugin-vitest": "^0.0.54",
     "jest-extended": "^3.2.4",
     "localtunnel": "^2.0.2",
     "msw": "^1.1.0",
