--- a/package.json
+++ b/package.json
@@ -34,13 +34,15 @@
     "@tsconfig/recommended": "^1.0.1",
     "@types/debug": "^4.1.7",
     "@types/pg": "^8.6.6",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "@vitest/coverage-c8": "^0.29.7",
     "@vitest/coverage-istanbul": "^0.29.7",
     "@vitest/ui": "^0.29.7",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.27.5",
     "eslint-plugin-jest": "^27.0.4",
     "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-vitest": "^0.0.54",
@@ -52,6 +54,7 @@
     "ts-unused-exports": "^9.0.4",
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
+    "vite-plugin-cjs-interop": "^0.0.8",
     "vite-tsconfig-paths": "^4.0.7",
     "vitest": "^0.29.2",
     "vitest-mock-extended": "^1.1.3"
