--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.8"
+    "@swc/core": "^1.3.8",
+    "typescript": "^5.0.3"
   }
 }
