--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": { 
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "isolatedModules": true,
-    "baseUrl": "../../",
   },
   "ts-node": {
     "swc": true
