--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "vitest.commandLine": "",
   "vitest.nodeEnv": {
     "VSCODE_TESTING": "true"
-  }
+  },
+  "cSpell.words": [
+    "prando"
+  ]
 }
