--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@sentry/cli": "^2.8.0",
     "@swc-node/sourcemap-support": "^0.2.0",
     "@swc/cli": "^0.1.57",
@@ -55,6 +56,7 @@
     "tsconfig-paths": "^4.1.0",
     "tslib": "^2.4.0",
     "vite-plugin-cjs-interop": "^0.0.8",
+    "vite-plugin-markdown": "^2.1.0",
     "vite-tsconfig-paths": "^4.0.7",
     "vitest": "^0.29.2",
     "vitest-mock-extended": "^1.1.3"
