--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run build:favicons && npm run build:vite",
     "build:vite": "NODE_OPTIONS='--experimental-specifier-resolution=node' vite build",
-    "build:favicons": "ts-node src/favicons/generate",
+    "build:favicons": "ts-node src/favicons/generate --emit",
     "typecheck": "tsc --noEmit",
     "dev": "TZ=UTC DEBUG=\"${DEBUG:=hearye*}\" vite --port 4000",
     "start": "serve --listen 4001 ./dist/client"
