--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -34,6 +34,7 @@
     "sass": "^1.56.1",
     "slack-bolt-fastify": "^0.3.1",
     "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3",
     "vite-plugin-commonjs": "^0.5.3",
     "vite-plugin-ssr": "^0.4.47"
