--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:db": "npm run build:logger && npm run build:env && npm run build:dayjs && npm run build --workspace @hearye/db",
     "build:env": "npm run build --workspace @hearye/env",
     "build:logger": "npm run build --workspace @hearye/logger",
-    "build:reminder-runner": "npm run build:logger && npm run build:env && npm run build:db && npm run build --workspace @hearye/reminder-runner",
+    "build:reminder-runner": "npm run build:api && npm run build:logger && npm run build:env && npm run build:db && npm run build --workspace @hearye/reminder-runner",
     "build:site": "npm run build --workspace @hearye/site",
     "dev:api": "npm run dev --workspace @hearye/api",
     "dev:reminder-runner": "npm run dev --workspace @hearye/reminder-runner",
