--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -38,6 +38,9 @@
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3",
     "vite-plugin-commonjs": "^0.5.3",
+    "vite-plugin-cjs-interop": "^0.0.8",
+    "vite-plugin-markdown": "^2.1.0",
+    "vite-tsconfig-paths": "^4.0.7",
     "vite-plugin-ssr": "^0.4.47"
   },
   "devDependencies": {
