--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -41,9 +41,7 @@
     "vite-plugin-cjs-interop": "^0.0.8",
     "vite-plugin-markdown": "^2.1.0",
     "vite-tsconfig-paths": "^4.0.7",
-    "vite-plugin-ssr": "^0.4.47"
-  },
-  "devDependencies": {
+    "vite-plugin-ssr": "^0.4.47",
     "@fastify/restartable": "^1.2.1",
     "@fontsource/archivo-narrow": "^4.5.10",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
@@ -59,8 +57,7 @@
     "chokidar": "^3.5.3",
     "prando": "^6.0.1",
     "serve": "^14.1.1",
-    "unplugin-swc": "^1.3.2",
-    "vite-plugin-cjs-interop": "^0.0.7"
+    "unplugin-swc": "^1.3.2"
   },
   "peerDependencies": {
     "estree-walker": "2.0.2"
