--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,5 @@
   "vitest.nodeEnv": {
     "VSCODE_TESTING": "true"
   },
-  "cSpell.words": [
-    "fastify",
-    "hearye",
-    "prando"
-  ]
+  "cSpell.words": ["fastify", "hearye", "prando"]
 }
