--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "tunnel": "./loophole http 8080 --hostname hearye",
     "tunnel:site": "./loophole http 4000 --hostname hearyesite",
     "test": "vitest",
-    "lint": "eslint . --ext .ts,.tsx,.js,.jsx"
+    "lint": "npm run lint:eslint && npm run lint:prettier",
+    "lint:eslint": "eslint . --ext .ts,.tsx,.js,.jsx",
+    "lint:prettier": "prettier --check ."
   },
   "author": "",
   "license": "ISC",
