--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -17,11 +17,25 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fastify/middie": "^8.0.0",
+    "@fastify/restartable": "^1.2.1",
+    "@fontsource/archivo": "^4.5.11",
+    "@fontsource/archivo-narrow": "^4.5.10",
     "@mui/material": "^5.10.12",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
+    "@rollup/plugin-commonjs": "^23.0.2",
     "@slack/bolt": "^3.12.1",
     "@supercharge/promise-pool": "^2.3.2",
+    "@swc-node/register": "^1.5.1",
+    "@swc/cli": "^0.1.57",
+    "@swc/core": "^1.3.14",
     "@tsconfig/recommended": "^1.0.2",
+    "@types/compression": "^1.7.2",
+    "@types/glob": "^8.0.0",
+    "@types/lodash": "^4.14.189",
+    "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^2.2.0",
+    "ansi-to-html": "^0.7.2",
+    "chokidar": "^3.5.3",
     "dd-trace": "^3.2.0",
     "debug": "^4.3.4",
     "estree-walker": "2.0.2",
@@ -32,32 +46,20 @@
     "favicons": "^7.1.2",
     "globby": "^13.1.2",
     "lodash": "^4.17.21",
+    "prando": "^6.0.1",
+    "react-twitter-embed": "^4.0.4",
     "sass": "^1.56.1",
+    "serve": "^14.1.1",
     "slack-bolt-fastify": "^0.3.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.3",
-    "vite-plugin-commonjs": "^0.5.3",
+    "unplugin-swc": "^1.3.2",
     "vite-plugin-cjs-interop": "^0.0.8",
+    "vite-plugin-commonjs": "^0.5.3",
     "vite-plugin-markdown": "^2.1.0",
-    "vite-tsconfig-paths": "^4.0.7",
     "vite-plugin-ssr": "^0.4.47",
-    "@fastify/restartable": "^1.2.1",
-    "@fontsource/archivo-narrow": "^4.5.10",
-    "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@rollup/plugin-commonjs": "^23.0.2",
-    "@swc-node/register": "^1.5.1",
-    "@swc/cli": "^0.1.57",
-    "@swc/core": "^1.3.14",
-    "@types/compression": "^1.7.2",
-    "@types/glob": "^8.0.0",
-    "@types/lodash": "^4.14.189",
-    "@types/react-dom": "^18.0.9",
-    "ansi-to-html": "^0.7.2",
-    "chokidar": "^3.5.3",
-    "prando": "^6.0.1",
-    "serve": "^14.1.1",
-    "unplugin-swc": "^1.3.2"
+    "vite-tsconfig-paths": "^4.0.7"
   },
   "peerDependencies": {
     "estree-walker": "2.0.2"
