--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -20,6 +20,7 @@
     "@fastify/restartable": "^1.2.1",
     "@fontsource/archivo": "^4.5.11",
     "@fontsource/archivo-narrow": "^4.5.10",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.10.12",
     "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@rollup/plugin-commonjs": "^23.0.2",
