--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   ],
   "dependencies": {
     "@fastify/express": "^2.3.0",
+    "@iconify/react": "^4.1.0",
     "@immobiliarelabs/fastify-sentry": "^5.0.0-next.1",
     "@logtail/node": "^0.1.12",
     "@logtail/winston": "^0.1.13",
