--- a/apps/site/package.json
+++ b/apps/site/package.json
@@ -50,6 +50,7 @@
     "prando": "^6.0.1",
     "react-twitter-embed": "^4.0.4",
     "sass": "^1.56.1",
+    "scriptjs": "^2.5.9",
     "serve": "^14.1.1",
     "slack-bolt-fastify": "^0.3.1",
     "ts-node": "^10.9.1",
