--- a/render.yaml
+++ b/render.yaml
@@ -68,6 +68,26 @@ services:
 
     autoDeploy: true
 
+
+
+- type: web
+  name: Site Staging
+  env: static
+  repo: https://github.com/msaspence/hearye
+  branch: staging
+  rootDir: .
+
+  envVars:
+    - fromGroup: Production
+  buildCommand: npm run build:site
+  staticPublishPath: apps/site/dist/client
+  autoDeploy: true
+  domains:
+    - staging.hearyebot.com
+    
 databases:
   - name: DB Production
+    databaseName: hearye
+
+  - name: DB Staging
     databaseName: hearye
