--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,5 @@
   "vitest.nodeEnv": {
     "VSCODE_TESTING": "true"
   },
-  "cSpell.words": [
-    "fastify",
-    "hearye",
-    "hearyebot",
-    "prando",
-    "twttr"
-  ]
+  "cSpell.words": ["fastify", "hearye", "hearyebot", "prando", "twttr"]
 }
