--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,10 @@
   "cSpell.words": [
     "fastify",
     "hearye",
+    "hearyebot",
     "prando",
-    "twttr"
+    "twttr",
+    "usergroup",
+    "usergroups"
   ]
 }
