--- a/apps/reminder-runner/package.json
+++ b/apps/reminder-runner/package.json
@@ -14,6 +14,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@supercharge/promise-pool": "^2.4.0"
+  },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
     "@swc/core": "^1.3.8",
