--- a/packages/env/package.json
+++ b/packages/env/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "find-config": "^1.0.0"
+    "find-config": "^1.0.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.57",
